# nand2tetris

./: .gitignore  APPENDIX.md  Appendix.md  CHANGELOG.md  CONTEXT.md  Changelog.md  PLAN-ASSERT.md  PLAN.md  README.md  TODO.md  nand2tetris.code-workspace  plan.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
archive/: README.md
emulator/: __init__.py  computer.py  fpga.py  hack.py
interpreter/: accelerated_engine.py  accelerator_common.py  analyzer.py  assembler.py  build_accelerator.py  build_fpga_backend.py  compiler.py  debugger.py  emulator.py  emulator_fpga.py  engine.py  fpga_backend.py  fpga_backend_ext.c  fpga_backend_ext.pyx  inputs.py  interpreter.py  runner.py  tester.py  tokenizer.py  translator.py
interpreter/emulator/: __init__.py  emulator.py  emulator_cli.py  emulator_fpga.py
interpreter/emulator/hack/: HACK.sh  __init__.py  build_package.py  hack.pygame  hack_launcher.py
interpreter/emulator/pong/: Pong.sh  __init__.py  build_package.py  pong.pygame  pong_launcher.py
interpreter/engine/: __init__.py  accelerated_engine.py  accelerator_common.py  build_accelerator.py  engine.py  fpga_backend.py  fpga_backend_ext.pyx
projects/09/Average/: Average.asm  Average.hack
projects/09/Fraction/: Fraction.asm  Fraction.hack  Main.jack  Main.vm
projects/09/HelloWorld/: HelloWorld.asm  HelloWorld.hack  Main.jack  Main.vm
projects/09/List/: List.asm  List.hack  Main.jack  Main.vm
projects/09/Square/: Square.asm  Square.hack
projects/12/: Output.jack
self-compiling/: asm-on-asm.asm
tools/: README.md
(+495 files in other folders)
